Fix social icon overflow issues on some smartphones

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -2,6 +2,8 @@
     color: white;
     text-decoration: inherit;
 }
-.icon {
-    display: inline;
+@media screen and (max-width: 500px) {
+    .icons {
+        display: none;
+    }
 }
